tests/valid/same_module.lang
module main

func some_func() {

}
