tests/invalid/duplicate_extern.lang
module main

#[link_name="whatever"]
extern func some_func();

extern func whatever();
